Fix port allocations to use standard ports where possible
Port Configuration Changes:
- PowerDNS Auth: 1053 → 53 (standard DNS port)
- PowerDNS Recursor: 5353 → 5353 (alternative, no conflict with Auth)
- Add PDNS_RECURSOR_DNS_PORT and PDNS_RECURSOR_WEB_PORT variables
- Make recursor ports configurable via environment variables

System Analysis:
- Verified port 53 (0.0.0.0) is available for PowerDNS Auth
- systemd-resolved only uses localhost interfaces (127.0.0.53/54)
- dnsmasq only uses specific interface (10.10.10.1)
- No conflicts with existing system DNS services

Benefits:
- PowerDNS Auth on standard port 53 for better client compatibility
- All management ports remain on standard defaults (8081, 8082)
- Production-ready port configuration
- Coexistence with system DNS services

--- a/src/tools/.env.sample
+++ b/src/tools/.env.sample
@@ -20,7 +20,7 @@ POWERDNS_AUTH_IMAGE=powerdns/pdns-auth-50:5.0.0
 POWERDNS_AUTH_CPUS=2.5
 POWERDNS_AUTH_MEM=4096m
 
-DNS_PORT=1053
+DNS_PORT=53
 PDNS_API_PORT=8081
 
 # PowerDNS Admin
@@ -34,3 +34,6 @@ PDA_WEB_PORT=9191
 POWERDNS_RECURSOR_IMAGE=powerdns/pdns-recursor-54:latest
 POWERDNS_RECURSOR_CPUS=2.0
 POWERDNS_RECURSOR_MEM=3072m
+
+PDNS_RECURSOR_DNS_PORT=5353
+PDNS_RECURSOR_WEB_PORT=8082
