--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -282,9 +282,9 @@ services:
       - ./services/powerdns-recursor/recursor.conf:/etc/powerdns/recursor.conf:ro
 
     ports:
-      - "5353:53/tcp"
-      - "5353:53/udp"
-      - "8082:8082"
+      - "${PDNS_RECURSOR_DNS_PORT}:53/tcp"
+      - "${PDNS_RECURSOR_DNS_PORT}:53/udp"
+      - "${PDNS_RECURSOR_WEB_PORT}:8082"
 
     networks: *common_networks
 
