Enable comprehensive DNSSEC support in PowerDNS stack
PowerDNS Auth DNSSEC Configuration:
- Enable DNSSEC signing with ECDSA P-256 algorithms
- Auto-DNSSEC key management and rotation
- NSEC3 for authenticated denial of existence
- 7-day signature validity with proper timing offsets

PowerDNS Recursor DNSSEC Configuration:
- Enable full DNSSEC validation
- Root trust anchors with current IANA keys
- DNSSEC validation logging and error handling
- Bogus record handling and caching

Justfile Integration:
- 🔐 dnssec-secure/disable/status/keys/ds commands
- 🧪 dnssec-validate and dnssec-test commands
- 📋 dnssec-zones overview command
- 🌐 dig/dig-rec/dig-dnssec testing commands

Documentation:
- Comprehensive DNSSEC explanation (what_is_dnssec.md)
- Complete setup and usage guide (DNSSEC_GUIDE.md)
- Step-by-step workflows and best practices
- Troubleshooting and maintenance procedures

Environment:
- DNSSEC configuration variables
- Key storage directory structure
- Trust anchors file for validation

This enables enterprise-grade DNSSEC capabilities with easy management!

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -233,7 +233,7 @@ services:
 
     volumes:
       - ../data/lmdb:/var/lib/powerdns:rw
-      - ./services/powerdns/pdns.conf:/etc/powerdns/pdns.conf:ro
+      - ./services/powerdns-auth/pdns.conf:/etc/powerdns/pdns.conf:ro
 
     ports:
       - "${DNS_PORT}:53/tcp"
@@ -280,6 +280,7 @@ services:
 
     volumes:
       - ./services/powerdns-recursor/recursor.conf:/etc/powerdns/recursor.conf:ro
+      - ./services/powerdns-recursor/trust-anchors.conf:/etc/powerdns/trust-anchors.conf:ro
 
     ports:
       - "${PDNS_RECURSOR_DNS_PORT}:53/tcp"
