--- a/src/services/powerdns-recursor/recursor.conf
+++ b/src/services/powerdns-recursor/recursor.conf
@@ -19,3 +19,20 @@ permit-small-ttls=yes
 
 # Do not forward by default; use root servers
 # forward-zones=
+
+# DNSSEC Configuration
+dnssec=validate
+dnssec-log-bogus=yes
+dnssec-disabled-algorithms=
+
+# Root trust anchors (automatically maintained)
+trust-anchors-file=/etc/powerdns/trust-anchors.conf
+
+# DNSSEC validation settings
+max-bogus-ttl=3600
+max-cache-bogus-ttl=60
+
+# Logging for DNSSEC validation
+loglevel=6
+log-common-errors=yes
+quiet=no
