--- a/src/services/powerdns/pdns.conf
+++ b/src/services/powerdns/pdns.conf
@@ -55,6 +55,23 @@ lmdb-map-size=1024
 enable-lua-records=yes
 lua-records-insert-whitespace=no
 
+# DNSSEC Configuration
+dnssec=yes
+default-ksk-algorithm=ecdsa256
+default-zsk-algorithm=ecdsa256
+default-ksk-size=0
+default-zsk-size=0
+
+# DNSSEC key rollover settings
+auto-dnssec=on
+nsec3-narrow=yes
+default-negative-ttl=600
+
+# DNSSEC timing
+signature-inception-offset=300
+signature-validity-default=604800
+signature-cache-validity=86400
+
 # Metrics / health (optional)
 carbon-server=
 carbon-interval=60
