--- a/src/tools/.env.sample
+++ b/src/tools/.env.sample
@@ -37,3 +37,10 @@ POWERDNS_RECURSOR_MEM=3072m
 
 PDNS_RECURSOR_DNS_PORT=5353
 PDNS_RECURSOR_WEB_PORT=8082
+
+# DNSSEC Configuration
+DNSSEC_ENABLED=yes
+DNSSEC_DEFAULT_KSK_ALGORITHM=ecdsa256
+DNSSEC_DEFAULT_ZSK_ALGORITHM=ecdsa256
+DNSSEC_SIGNATURE_VALIDITY=604800
+DNSSEC_AUTO_RECTIFY=yes
