--- a/src/services/powerdns-auth/pdns.conf
+++ b/src/services/powerdns-auth/pdns.conf
@@ -9,14 +9,14 @@ config-dir=/etc/powerdns
 
 # Logging
 loglevel=3
-log-dns-details=yes
-log-dns-queries=yes
+log-dns-details=no
+log-dns-queries=no
 disable-syslog=no
 logging-facility=0
 
 # Performance
-distributor-threads=1
-receiver-threads=30
+distributor-threads=4
+receiver-threads=16
 reuseport=yes
 
 # DNS service
@@ -38,9 +38,9 @@ default-soa-edit-signed=INCEPTION-EPOCH
 api=yes
 api-key=${PDNS_AUTH_API_KEY}
 webserver=yes
-webserver-address=0.0.0.0
+webserver-address=127.0.0.1
 webserver-port=8081
-webserver-allow-from=0.0.0.0/0
+webserver-allow-from=127.0.0.1/32
 
 # Backend (LMDB)
 launch=lmdb
@@ -49,7 +49,7 @@ lmdb-filename=/var/lib/powerdns/pdns.lmdb
 lmdb-schema-version=5
 lmdb-sync-mode=sync
 lmdb-lightning-stream=yes
-lmdb-map-size=1024
+lmdb-map-size=8192
 
 # Lua records
 enable-lua-records=yes
