--- a/src/services/powerdns-recursor/recursor.conf
+++ b/src/services/powerdns-recursor/recursor.conf
@@ -2,19 +2,19 @@
 # Listens on all interfaces for DNS on port 53 inside the container
 local-address=0.0.0.0
 
-# Optional: enable built-in web server for stats
-webserver=yes
-webserver-address=0.0.0.0
+# Optional: built-in web server for stats (disabled in prod)
+webserver=no
+webserver-address=127.0.0.1
 webserver-port=8082
-webserver-allow-from=0.0.0.0/0
+webserver-allow-from=127.0.0.1/32
 
 # Performance / cache defaults
-max-cache-entries=100000
+max-cache-entries=500000
 max-negative-ttl=60
 max-cache-ttl=3600
 
-# Security and recursion behavior
-allow-from=0.0.0.0/0
+# Security and recursion behavior (restrict to RFC1918 + loopback)
+allow-from=127.0.0.1/32,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 permit-small-ttls=yes
 
 # Do not forward by default; use root servers
@@ -33,6 +33,6 @@ max-bogus-ttl=3600
 max-cache-bogus-ttl=60
 
 # Logging for DNSSEC validation
-loglevel=6
+loglevel=4
 log-common-errors=yes
 quiet=no
