--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -69,7 +69,7 @@ services:
 
     depends_on:
       - minio
-      - powerdns
+      - powerdns-auth
 
     networks: *common_networks
 
@@ -201,7 +201,7 @@ services:
       - "${PDA_WEB_PORT}:80"
 
     depends_on:
-      - powerdns
+      - powerdns-auth
 
     networks: *common_networks
 
