--- a/tools/.env.sample
+++ b/tools/.env.sample
@@ -1,46 +1,65 @@
-# LightningStream
-LIGHTNINGSTREAM_IMAGE=powerdns/lightningstream:0.5.0
-LIGHTNINGSTREAM_CPUS=0.75
-LIGHTNINGSTREAM_MEM=1536m
+# PowerDNS Enterprise Stack Configuration
+# All environment variables grouped by service
 
-# MinIO
-MINIO_IMAGE=minio/minio:RELEASE.2025-09-07T16-13-09Z
-MINIO_CPUS=1.5
-MINIO_MEM=2560m
+# =============================================================================
+# GLOBAL SETTINGS
+# =============================================================================
+TZ=Asia/Riyadh
+COMPOSE_PROJECT_NAME=powerdns-stack
+
+# POWERDNS AUTH SERVER
+POWERDNS_AUTH_IMAGE=powerdns/pdns-auth-49:4.9.2
+POWERDNS_AUTH_CPUS=2.0
+POWERDNS_AUTH_MEM=2G
+
+# DNS and API Ports
+DNS_PORT=1053
+PDNS_API_PORT=8081
+
+# POWERDNS RECURSOR
+POWERDNS_RECURSOR_IMAGE=powerdns/pdns-recursor-49:4.9.5
+POWERDNS_RECURSOR_CPUS=1.0
+POWERDNS_RECURSOR_MEM=1G
+
+# RECURSOR PORTS
+PDNS_RECURSOR_DNS_PORT=5353
+PDNS_RECURSOR_WEB_PORT=8082
+
+# POWERDNS ADMIN
+POWERDNS_ADMIN_IMAGE=ngoduykhanh/powerdns-admin:latest
+PDA_CPUS=1.0
+PDA_MEM=1G
+PDA_WEB_PORT=9191
+
+# POWERDNS ADMIN APPLICATION SETTINGS
+PDA_GUNICORN_TIMEOUT=60
+PDA_GUNICORN_WORKERS=2
+PDA_GUNICORN_LOGLEVEL=info
+PDA_DATABASE_URI=sqlite:////data/pda.db
+
+# LIGHTNINGSTREAM
+LIGHTNINGSTREAM_IMAGE=powerdns/lightningstream:0.5.0
+LIGHTNINGSTREAM_CPUS=1.0
+LIGHTNINGSTREAM_MEM=1G
+
+# LIGHTNINGSTREAM CONFIGURATION
+LIGHTNINGSTREAM_HTTP_PORT=8080
+LIGHTNINGSTREAM_INSTANCE=powerdns-1
+LIGHTNINGSTREAM_LOG_LEVEL=info
+LIGHTNINGSTREAM_LOG_FORMAT=json
+LIGHTNINGSTREAM_TIMEOUT=24h
+
+# MINIO S3 STORAGE
+MINIO_IMAGE=minio/minio:latest
+MINIO_CPUS=1.0
+MINIO_MEM=2G
+
+# MinIO Ports
 MINIO_API_PORT=9000
 MINIO_CONSOLE_PORT=9001
 
 # MinIO Client
-MINIO_CLIENT_IMAGE=minio/mc:RELEASE.2025-08-13T08-35-41Z
-MINIO_CLIENT_CPUS=0.25
-MINIO_CLIENT_MEM=512m
-
-# PowerDNS Auth
-POWERDNS_AUTH_IMAGE=powerdns/pdns-auth-50:5.0.0
-POWERDNS_AUTH_CPUS=2.5
-POWERDNS_AUTH_MEM=4096m
-
-DNS_PORT=53
-PDNS_API_PORT=8081
-
-# PowerDNS Admin
-POWERDNS_ADMIN_IMAGE= ngoduykhanh/powerdns-admin:latest
-PDA_CPUS=0.25
-PDA_MEM=1024m
-
-PDA_WEB_PORT=9191
-
-# PowerDNS Recursor
-POWERDNS_RECURSOR_IMAGE=powerdns/pdns-recursor-54:latest
-POWERDNS_RECURSOR_CPUS=2.0
-POWERDNS_RECURSOR_MEM=3072m
-
-PDNS_RECURSOR_DNS_PORT=5353
-PDNS_RECURSOR_WEB_PORT=8082
-
-# DNSSEC Configuration
-DNSSEC_ENABLED=yes
-DNSSEC_DEFAULT_KSK_ALGORITHM=ecdsa256
-DNSSEC_DEFAULT_ZSK_ALGORITHM=ecdsa256
-DNSSEC_SIGNATURE_VALIDITY=604800
-DNSSEC_AUTO_RECTIFY=yes
+MINIO_CLIENT_IMAGE=minio/mc:latest
+MINIO_CLIENT_CPUS=0.5
+MINIO_CLIENT_MEM=512M
+MINIO_BUCKET_NAME=powerdns-sync
