--- a/tools/.env.secrets.sample
+++ b/tools/.env.secrets.sample
@@ -1,13 +1,24 @@
-# LightningStream
+# PowerDNS Enterprise Stack - Secrets Configuration
+# All sensitive variables grouped by service
 
-# MinIO
+# =============================================================================
+# POWERDNS AUTH SERVER SECRETS
+# =============================================================================
+PDNS_AUTH_API_KEY=powerdns-enterprise-api-key-2024-site-sa-secure
+
+# =============================================================================
+# POWERDNS RECURSOR SECRETS
+# =============================================================================
+PDNS_RECURSOR_API_KEY=powerdns-recursor-api-key-2024-site-sa-secure
+
+# =============================================================================
+# POWERDNS ADMIN SECRETS
+# =============================================================================
+PDA_SECRET_KEY=powerdns-admin-secret-key-site-sa-2024-enterprise-grade
+PDA_CSRF_SECRET_KEY=csrf-protection-key-site-sa-2024
+
+# =============================================================================
+# MINIO S3 STORAGE SECRETS
+# =============================================================================
 MINIO_ROOT_USER=admin
-MINIO_ROOT_PASSWORD=mypassword
-
-# MinIO Client
-
-# PowerDNS Auth
-PDNS_AUTH_API_KEY=mypassword
-
-# PowerDNS Admin
-PDA_SECRET_KEY=mypassword
+MINIO_ROOT_PASSWORD=SecureMinIOPassword2024SiteSA
